[gd_scene load_steps=10 format=3 uid="uid://cwdtqevwv6pia"]

[ext_resource type="Script" path="res://scripts/Bosses/BossCalm.gd" id="1_6yvx8"]
[ext_resource type="Texture2D" uid="uid://d0aihejwqn0ft" path="res://art/enemies/bosses/calm1.png" id="1_a8hc2"]
[ext_resource type="PackedScene" uid="uid://b68wx6n7c0741" path="res://scenes/enemies/enemy-demo.tscn" id="3_ag0ge"]
[ext_resource type="Script" path="res://scripts/misc/HitFlash.gd" id="3_c6n5s"]
[ext_resource type="PackedScene" uid="uid://4hg0pjrklssf" path="res://scenes/bullets/bullet_blue_round.tscn" id="4_bb5ig"]
[ext_resource type="PackedScene" uid="uid://e744k2hsji7g" path="res://scenes/bullets/bullet_orange.tscn" id="5_gjj1u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e0mr4"]
radius = 15.0001

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tb1n4"]
size = Vector2(46.0002, 38.0001)

[sub_resource type="Curve2D" id="Curve2D_diusg"]
_data = {
"points": PackedVector2Array(-59.4641, 1.88775, 59.4641, -1.88775, -1.00002, -12.4916, 22.2487, -34.6549, -22.2487, 34.6549, 111, 14.8934, 0, 0, 0, 0, -1.00002, 40.757, 7.94597, 34.6549, -7.94597, -34.6549, -121, 11.8506, 2.11893, 0, -2.11893, 0, -1.00002, -12.4916)
}
point_count = 5

[node name="boss-calm" type="Node2D" node_paths=PackedStringArray("hit_flash")]
script = ExtResource("1_6yvx8")
hit_flash = NodePath("Sprite2D/HitFlash")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
z_index = -1000
position = Vector2(-2.84217e-14, 2.34842e-05)
scale = Vector2(0.181481, 0.181481)
texture = ExtResource("1_a8hc2")

[node name="HitFlash" type="ColorRect" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0)
offset_left = -149.0
offset_top = -612.0
offset_right = 149.0
offset_bottom = -83.0
script = ExtResource("3_c6n5s")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
visible = false

[node name="Hurtbox" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(11.0204, -396.736)
scale = Vector2(5.5102, 5.5102)
shape = SubResource("CircleShape2D_e0mr4")

[node name="Hurtbox2" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(5.51022, -192.858)
scale = Vector2(5.5102, 5.5102)
shape = SubResource("RectangleShape2D_tb1n4")

[node name="enemy-demo" parent="Sprite2D" instance=ExtResource("3_ag0ge")]
visible = false
position = Vector2(-500, -150)
scale = Vector2(5.5102, 5.5102)
bullet_scene = ExtResource("4_bb5ig")
rotate_speed = 0
shooter_timer_wait_time = 0.5
spawn_point_count = 7
radius = 4
bullet_speed = 300
bullet_scale = 0.7

[node name="Heart Shooter" parent="Sprite2D" instance=ExtResource("3_ag0ge")]
visible = false
position = Vector2(0, -150)
scale = Vector2(5.5102, 5.5102)
bullet_scene = ExtResource("5_gjj1u")
rotate_speed = 0
shooter_timer_wait_time = 1.0
shooter_delay_timer_wait_time = 0.5
spawn_point_count = 16
radius = 4
bullet_speed = 200
bullet_lifetime = 20

[node name="enemy-demo2" parent="Sprite2D" instance=ExtResource("3_ag0ge")]
visible = false
position = Vector2(500, -150)
scale = Vector2(5.5102, 5.5102)
rotate_speed = 0
shooter_timer_wait_time = 0.5
spawn_point_count = 7
radius = 4
bullet_speed = 300
bullet_scale = 0.7

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(2.00002, 15)
curve = SubResource("Curve2D_diusg")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-1.00002, -12.4916)
rotates = false

[connection signal="start_combat" from="." to="Sprite2D/enemy-demo" method="_on_boss_start_combat"]
[connection signal="start_combat" from="." to="Sprite2D/Heart Shooter" method="_on_boss_start_combat"]
[connection signal="start_combat" from="." to="Sprite2D/enemy-demo2" method="_on_boss_start_combat"]
[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
